# tuxpilot

./: .gitignore  AUTONOMOUS_EXECUTION_SUMMARY.md  CHANGELOG.md  COMPILATION_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  NEXT_STEPS.md  OLLAMA-SETUP.md  README.md  README_OLD.md  ROADMAP_SUMMARY.md  SECURITY.md  api-tester.html  build-web-ui.sh  build.sh  demo-autonomous.sh  demo-ollama.sh  demo.html  demo.sh  install-web-ui.sh  install.sh  setup-ollama.sh  test-complete-integration.sh  test-complete-system.sh  uninstall.sh
.github/: FUNDING.yml  copilot-instructions.md
.zencoder/rules/: repo.md
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  CONFIGURATION.md  GETTING_STARTED.md  MCP_INTEGRATION.md  MULTI_AGENT_SYSTEM.md  PLUGIN_SYSTEM.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  WEB_UI_INSTALLATION.md
examples/: ollama-config.toml
src/: cli.rs  config.rs  error_diagnosis.rs  linux_integration.rs  main.rs  system_monitor.rs
src/agents/: README.md  mod.rs  network_agent.rs  orchestrator.rs  package_agent.rs  performance_agent.rs  security_agent.rs  system_agent.rs
src/ai/: mod.rs
src/automation/: README.md  backup.rs  maintenance.rs  mod.rs  scheduler.rs  tasks.rs  updates.rs
src/containers/: README.md  cloud.rs  docker.rs  kubernetes.rs  mod.rs  orchestration.rs
src/error_diagnosis/: advanced.rs
src/execution/: audit.rs  mod.rs  permissions.rs  safety.rs
src/mcp/: README.md  mod.rs  resources.rs  tools.rs
src/monitoring/: alerting.rs  analytics.rs  dashboard.rs  metrics.rs  mod.rs  predictive.rs
src/nlp/: context.rs  conversation.rs  entity.rs  intent.rs  mod.rs  sentiment.rs
static/: chat.html  config.html  index.html
tests/: integration_test.rs
web-ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+137 files in other folders)
